examples/errors/parsing/let_plain.cn
main : () [impure] =
  let a = 1;
  let b = 2;
  let c = a + b;
  let d = c * 2;
  let e = d - 1;
  ()
